--- a/BOOKSHELF/templates/user_login.html
+++ b/BOOKSHELF/templates/user_login.html
@@ -19,9 +19,19 @@
         <h1>Login</h1>
         <input type="text" placeholder="username" name="name" id="" class="input" style="transform:translate(0px,20px);"><br>
         <input type="password" placeholder="password" name="psw" class="input" style="transform:translate(0px,20px);"><br>
+        <div class="forgot">
+                <input type="checkbox" name="check" class="check" style="color:white" checked> remember me
+                <a href="{% url 'password_reset' %}" style="color:white;text-decoration:none;white-space:nowrap;">forget password</a>
+            </div>
         <input type="submit" value="submit" class="button">
         <p>dont you have an account ? <a href="../register" style="text-decoration:none;color:rgb(114, 255, 49)">Register</a></p>
     </form>
+
+    {% if messages %}
+  {% for message in messages %}
+    <p style="color: red;">{{ message }}</p>
+  {% endfor %}
+{% endif %}
     </div></div>
 </body>
 </html>
