--- a/BOOKSHELF/static/css/bookdetails.css
+++ b/BOOKSHELF/static/css/bookdetails.css
@@ -1,149 +1,369 @@
-*{
-    margin:0px;
+* {
+    margin: 0px;
+    padding: 0;
+    box-sizing: border-box;
 }
-.main{
+
+html, body, .main {
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.main {
     min-height: 900px;
 }
-.nav{
-    height:80px;
-    width:cover;
-    display:flex;
-    background-color:chartreuse;
-    justify-content:space-evenly;
-    align-items:center;
-}
-.logo{
-    height:50px;
-    width:150px;;
+
+/* ------------------ NAVIGATION ------------------ */
+.nav {
+    width: 100%;
+    background-color: chartreuse;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
+    padding: 10px 20px;
+}
+
+.logo {
+    height: 50px;
     font-size: 20px;
     font-weight: bold;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    position:absolute;
-    left:30px;
-
-}
-.list ul{
-    height:80px;
-    width:400px;
-    display:flex;
-    justify-content: space-around;
-    align-items:center;
-    position:relative;
-    right:20px;
-    transform:translate(30px);
-   
-}
-.list a{
-    text-decoration:none;
-    color:black;
-}
-.list a:hover{
-    transform:translateY(-3px);
-    color:blueviolet;
-}
-.list .page{
-    color:rgb(214, 4, 4);
-    font-weight:800;
-}
-.list img{
-    height:25px;
-    width:25px;
-} 
-.search input{
-    height:10px;
-    width:300px;
-    display:flex;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    align-items: center;
-    position:relative;
-    left:120px;
-    padding:10px;
-    top:15px;
-    border-radius:10px;
+    margin: 5px;
 }
-.search img{
-    height:30px;
-    width:30px;
-    transform:translate(411px,-17px);
-    background-color:yellow;
-    background-size: 40px,40px;
+
+.list ul {
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 5px 0;
+    padding: 0;
+}
+
+.list a {
+    text-decoration: none;
+    color: black;
+}
+
+.list a:hover {
+    transform: translateY(-3px);
+    color: blueviolet;
+}
+
+.list .page {
+    color: rgb(214, 4, 4);
+    font-weight: 800;
+}
+
+.list img {
+    height: 25px;
+    width: 25px;
+}
+
+/* Search */
+.search {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 10px;
+}
+
+.search input {
+    width: 250px;
+    padding: 10px;
     border-radius: 10px;
-
 }
-.cart{
-    width:10%;
-    display:flex;
-    justify-content:center;
+
+.search img {
+    height: 30px;
+    width: 30px;
+    border-radius: 10px;
+    background-color: yellow;
+    background-size: cover;
+}
+
+/* Cart */
+.cart {
+    display: flex;
     align-items: center;
-    position:absolute;
-    right:30px;
-    background-color:aqua;
-    border:2px solid black;
-  
-
-}
-.cart img{
-    height:40px;
-    width:40px;
+    background-color: aqua;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px;
 }
 
-.cart p{
-display:flex;
-justify-content: center;
-align-items: center;
-font-size:20px;
+.cart img {
+    height: 40px;
+    width: 40px;
 }
-.list2{
-    height:60px;
-    width:50%;
-    display:flex;
-    justify-content: space-around;
-    align-items:center;
-    
-    /* transform:translate(120px); */
-   
 
+.cart p {
+    margin-left: 10px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
 }
-.nav2 a{
-    text-decoration:none;
-    color:black;
+
+/* ------------------ SECOND NAV ------------------ */
+.nav2 {
+    width: 100%;
+    background-color: rgb(174, 255, 208);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px 0;
 }
-.nav2{
-    height:50px;
-    width:cover;
-    display:flex;
-    background-color:rgb(174, 255, 208);
-    justify-content:space-evenly;
-    align-items:center;
+
+.nav2 a {
+    text-decoration: none;
+    color: black;
 }
-.nav2 a:hover{
-   transform:translateY(-3px);
-   color:blueviolet;
-}  
- .star-rating {
-            direction: rtl;
-            unicode-bidi: bidi-override;
-            font-size: 2rem;
-            display: inline-block;
-        }
 
-        .star-rating input[type="radio"] {
-            display: none;
-        }
+.nav2 a:hover {
+    transform: translateY(-3px);
+    color: blueviolet;
+}
 
-        .star-rating label {
-            color: gray;
-            cursor: pointer;
-        }
+.list2 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 10px 0;
+}
 
-        .star-rating input[type="radio"]:checked ~ label {
-            color: gold;
-        }
+/* ------------------ BOOK & DETAILS ------------------ */
+.bookimage {
+    margin-left: 30%;
+    margin-right:40%;
+    margin-top:10%;
+    height: 250px;
+    width: 200px;
+}
 
-        .star-rating label:hover,
-        .star-rating label:hover ~ label {
-            color: gold;
-        }
+.details {
+    margin: 60px;
+}
+
+/* ------------------ STAR RATING ------------------ */
+.star-rating {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+}
+
+.star-rating input[type="radio"] {
+    display: none;
+}
+
+.star-rating label {
+    color: gray;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+.star-rating input[type="radio"]:checked ~ label,
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+    color: gold;
+}
+
+/* ------------------ REVIEW SECTION ------------------ */
+.review-section {
+    max-width: 800px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+}
+
+.review-section p,
+.review-section h2 {
+    margin-bottom: 15px;
+    font-size: 18px;
+}
+
+.review-section ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin-bottom: 20px;
+}
+
+.review-section li {
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+/* Form */
+form label {
+    font-weight: bold;
+    display: block;
+    margin-top: 10px;
+}
+
+textarea {
+    width: 100%;
+    padding: 10px;
+    resize: vertical;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-family: inherit;
+    font-size: 16px;
+}
+
+button[type="submit"],
+button a {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+}
+
+button a:hover,
+button[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+table{
+    margin-left:20px;
+}
+/* ------------------ RESPONSIVE MEDIA QUERIES ------------------ */
+@media (max-width: 1024px) {
+    .nav, .nav2 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .list ul {
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .search input {
+        width: 80%;
+    }
+
+    .cart {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .logo {
+        margin-top: 10px;
+    }
+
+    .review-section {
+        padding: 15px;
+        margin: 20px;
+    }
+
+    .star-rating {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 768px) {
+    .nav, .nav2 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .list ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .search {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .search input {
+        width: 90%;
+    }
+
+    .cart {
+        width: 100%;
+        justify-content: center;
+        margin: 10px 0;
+    }
+
+    .logo {
+        margin-bottom: 10px;
+    }
+
+    .bookimage {
+        width: 40%;
+        height: auto;
+        margin-right:20%;
+    }
+
+    .details {
+        margin: 20px;
+    }
+
+    textarea {
+        font-size: 14px;
+    }
+
+    button[type="submit"],
+    button a {
+        width: 100%;
+        font-size: 16px;
+        padding: 12px;
+    }
+}
+
+@media (max-width: 480px) {
+    .list ul, .list2 {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .bookimage {
+        width: 50%;
+        margin-right:20%;
+    }
+
+    .search input {
+        width: 90%;
+    }
+
+    .search img {
+        margin-top: 5px;
+    }
+
+    .cart {
+        width: 100%;
+    }
+
+    .star-rating {
+        flex-wrap: wrap;
+        font-size: 22px;
+    }
+
+    textarea {
+        height: 100px;
+    }
+}
