--- a/BOOKSHELF/templates/ad_update2.html
+++ b/BOOKSHELF/templates/ad_update2.html
@@ -16,23 +16,24 @@
             </div>
 
           
-            <div class="cart"></div>
+
             <div class="search">
                 <input type="text" name="search" id="" placeholder="search">
     
-                <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt="">
+                <!-- <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt=""> -->
         </div>
 
-        <div class="list">
-            <ul type="none">
-                <li><a href="../adindex">Home</a></li>
-                <li><a href="../">Sign In</a></li>
-                <li><a href="../register">Sign Up</a></li>
-                <li><a href="../logout">Sign Out</a></li>
-                <li><a href="">Contact Us</a></li>
-                </ul>
-            </div>
-        </div>
+          <div class="list">
+                <ul type="none">
+                    <li><a href="{% url 'admin_order_management'%}">Order View</a></li>
+                    <li><a href="../adindex">Home</a></li>
+                    <li><a href="../adbookview">Product View</a></li>
+                    <li><a href="" class="page">update2</a></li>
+                    {% if user.is_authenticated %}
+                    <li><a href="../logout">Sign Out</a></li>
+                    </ul>
+                    {% endif %}
+            </div></div>
         <div class="nav2">
             <div class="list2">
                 <select>
@@ -52,7 +53,7 @@
         <div class="form">
      <!-- update -->
 
-     <form action="{% url 'adupdate2' data.name %}" method="POST">
+     <form action="" method="POST">
         {% csrf_token %}
       
             {% if user.is_authenticated %}
