--- a/BOOKSHELF/templates/admin_add2.html
+++ b/BOOKSHELF/templates/admin_add2.html
@@ -16,22 +16,24 @@
             </div>
 
           
-            <div class="cart"></div>
+           
             <div class="search">
                 <input type="text" name="search" id="" placeholder="search">
     
-                <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt="">
+                <!-- <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt=""> -->
         </div>
 
-        <div class="list">
-            <ul type="none">
-                <li><a href="../adbookview">Product View</a></li>
-                <li><a href="../adindex"class="page">Home</a></li>
-                <li><a href="../logout">Sign Out</a></li>
-        
-                </ul>
-            </div>
-        </div>
+          <div class="list">
+                <ul type="none">
+                    <li><a href="{% url 'admin_order_management'%}">Order View</a></li>
+                    <li><a href="../adindex">Home</a></li>
+                    <li><a href="../adbookview">Product View</a></li>
+                    <li><a href="" class="page">book Add2</a></li>
+                        {% if user.is_authenticated %}
+                    <li><a href="../logout">Sign Out</a></li>
+                    </ul>
+                    {% endif %}
+            </div></div>
         <div class="nav2">
             <div class="list2">
                 <select>
@@ -50,7 +52,7 @@
     </div>
 
         <div class="form">
-            <form action="../add2" method="POST">
+            <form action="" method="POST">
                 {% csrf_token %}
               
                     {% if user.is_authenticated %}
@@ -60,7 +62,7 @@
 
                 <tr>
                     <td><p>name       :</p></td>
-                 
+                    
                     <td><input type="text" placeholder="enter the name of book" name="name" value="{{data.name}}"></td></tr>
                 
                     <tr>
