--- a/BOOKSHELF/templates/admin_bookview.html
+++ b/BOOKSHELF/templates/admin_bookview.html
@@ -20,15 +20,16 @@
               
         <div class="search">
         <form method="get" action="../adbookview" style="display: flex; align-items: center;">
-        <input type="text" name="q" placeholder="Search books..."  value="{{ request.GET.q|default:'' }}"  style="transform:translate(100px,-15px)" class="input">
-        <button type="submit" style="background: none; border: none; cursor: pointer; margin-left:5px;transform:translate(230px,00px);border:2px solid black;padding:6px;background-color:yellow;border-radius:6px" aria-label="Search" >search</button>
-        <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000"  height="20px"  width="20px"  alt="Search" style="transform:translate(127px);">
+        <input type="text" name="q" placeholder="Search books..."  value="{{ request.GET.q|default:'' }}"   class="search-input">
+        <button type="submit"  aria-label="Search" class="search-btn">search</button>
+    
     </form>
 </div>
                 
               
             <div class="list">
                 <ul type="none">
+                    <li><a href="{% url 'admin_order_management'%}">Order View</a></li>
                     <li><a href="../adindex">Home</a></li>
                     <li><a href="../adbookview" class="page">Product View</a></li>
                     {% if user.is_authenticated %}
@@ -36,11 +37,7 @@
                     </ul>
                     {% endif %}
             </div>
-                <div class="cart">
-                    <p>cart</p>
-                    <a href=""><img src="{% static 'images/carticon.png' %}"></a>
-                    
-                </div>
+    
             </div>
             <div class="nav2">
                 <div class="list2">
