--- a/BOOKSHELF/templates/admin_index.html
+++ b/BOOKSHELF/templates/admin_index.html
@@ -9,45 +9,40 @@
 </head>
 <body>
     <div class="main">
-        <div class="nav">
+   <div class="nav">
             <div class="logo">
                 <img src="{% static 'images/logo.png'%}" height="60px" width="60px" alt="" style="border-radius:70%;">
                 <h3>BOOKSHELF</h3>
             </div>
 
-          
-            <div class="cart"></div>
             <div class="search">
                 <input type="text" name="search" id="" placeholder="search">
     
-                <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt="">
+                <!-- <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt=""> -->
         </div>
 
-        <div class="list">
-            <ul type="none">
-                <li><a href="../adbookview">Product View</a></li>
-                <li><a href="../adindex"class="page">Home</a></li>
-                <li><a href="../logout">Sign Out</a></li>
         
-                </ul>
-            </div>
-        </div>
+             <div class="list">
+                <ul type="none">
+                    <li><a href="{% url 'admin_order_management'%}">Order View</a></li>
+                    <li><a href="../adindex" class="page">Home</a></li>
+                    <li><a href="../adbookview" >Product View</a></li>
+                    {% if user.is_authenticated %}
+                    <li><a href="../logout">Sign Out</a></li>
+                    </ul>
+                    {% endif %}
+            </div></div>
         <div class="nav2">
             <div class="list2">
-                <select>
-                    <option selected>Select Language</option>
-                    <option value="English">English</option>
-                    <option value="Malayalam">Malayalam</option>
-                    </select>
-        
-                    <a href="../admlmchild">Children's Books</a>
-                    <a href="../admlmdetective">Detective Novels </a>
-                    <a href="../admlmfiction">Fiction</a>
-                    <a href="../admlmbiography">Biography</a>
-                    <a href="../admlmebook">EBooks</a>
+             
+                    <a href="../mlmchild " >Children's Books</a>
+                    <a href="../mlmdetective">Detective Novels </a>
+                    <a href="../mlmfiction">Fiction</a>
+                    <a href="../mlmbiography">Biography</a>
+                    <a href="../mlmebook">EBooks</a>
                     
         </div>
-    </div>
+        </div>
 
         <div class="form">
             <form action="../adindex" method="POST" enctype="multipart/form-data">
