--- a/BOOKSHELF/templates/user_index.html
+++ b/BOOKSHELF/templates/user_index.html
@@ -20,10 +20,16 @@
 
         <div class="search">
         <form method="get" action="../index" style="display: flex; align-items: center;">
-        <input type="text" name="q" placeholder="Search books..."  value="{{ request.GET.q|default:'' }}"  style="transform:translate(100px,-15px)" class="input">
-        <button type="submit" style="background: none; border: none; cursor: pointer; margin-left:5px;transform:translate(230px,00px);border:2px solid black;padding:6px;background-color:yellow;border-radius:6px" aria-label="Search" >search</button>
-        <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000"  height="20px"  width="20px"  alt="Search" style="transform:translate(127px);">
+        <input type="text" name="q" list="recent-searches" placeholder="Search books..."  value="{{ request.GET.q|default:'' }}"   class="search-input">
+       <datalist id="recent-searches">
+  {% for entry in history %}
+    <option value="{{ entry.query }}">
+  {% endfor %}
+</datalist>
+        <button type="submit"  aria-label="Search" class="search-btn">search</button>
     </form>
+
+
 </div>
 <div class="list">
             <ul type="none">
@@ -33,6 +39,8 @@
                 <li><a href=""><img src="{% static 'images/profileicon.png' %}" ></a>
                 <li><a href="../logout">Sign Out</a></li>
                 <li><a href="">Contact Us</a></li>
+                <li><a href="{% url 'user_order_view'%}">Orders</a></li>
+
                 </ul>
                
                 {% else %}
@@ -41,14 +49,17 @@
                 <li><a href="">Contact Us</a></li>
                 </ul>
                 {% endif %}
-        </div>
+                </div>
+             
+       
 
         <div class="cart">
             <p>cart</p>
             <a href="../cart"><img src="{% static 'images/carticon.png' %}"></a>
-            
-        </div>
-    </div>
+             </div>
+                </div>
+        
+    
     <div class="nav2">
         <div class="list2">
          
@@ -61,33 +72,50 @@
     </div>
     </div>
 <div class="out">
-<div class="upload" >
+  <div class="upload">
     {% for i in data %}
-    <div class="output">
-        <p><a href=""><img src="{{i.doc.url}}"></a></p>
-      
+      <div class="output">
+        <p><a href=""><img src="{{i.doc.url}}" alt="book"></a></p>
         <p>{{i.name}}</p>
         <p>{{i.lname}}</p>
         <p class="price">₹{{i.price}}</p>
         <p class="old"><del>₹{{ i.oldprice }}</del></p>
         <p class="dis">{{i.discount}}% OFF</p>
         <div class="buttons">
-        <p class="add"><a href="../addcart/{{i.id}}" style="text-decoration:none;color:black;font-size:18px;">Add to Cart</a></p>
-        <p class="buy"><a href="../bookdetails/{{i.id}}" style="text-decoration:none;color:black;font-size:18px;">View Book</a></p>
-       
-
-
-         {% empty %}
-    <h1 class="not_found">No products matched</h1>
-
-   
-
-
-    </div>
+          <p class="add"><a href="../addcart/{{i.id}}" style="text-decoration:none;color:black;font-size:18px;">Add to Cart</a></p>
+          <p class="buy"><a href="../bookdetails/{{i.id}}" style="text-decoration:none;color:black;font-size:18px;">View Book</a></p>
+        </div>
+      </div>
+    {% empty %}
+      <h1 class="not_found">No products matched</h1>
     {% endfor %}
+  </div>
 </div>
+
+
+<div class="recommentation">
+  <h1>RECOMMENTATIONS FOR YOU</h1>
+{% if recommendations %}
+  <h2>Recommended For You</h2>
+  <div class="recommend-section">
+    {% for book in recommendations %}
+      <div class="book-card">
+    <img src="{{ book.doc.url }}" alt="bookimage" class="bookimage">
+    
+        <h4>{{ book.name }}</h4>
+        <p>₹{{ book.price }}</p>
+        <a href="{% url 'bookdetails' book.pk %}">View</a>
+      </div>
+    {% endfor %}
+    </div>
+    {% else%}
+    
+    <h2>Not found Recommendations for you</h2>
+ </div>
+ </div>
+{% endif %}
 </div>
-</div>
+
 
 <div class="footer">
 <div class="table">
