--- a/BOOKSHELF/templates/viewcart.html
+++ b/BOOKSHELF/templates/viewcart.html
@@ -9,32 +9,40 @@
 </head>
 <body>
      <div class="main">
-        <div class="nav">
+     <div class="nav">
             <div class="logo">
-                <img src="{% static 'images/logo.png'%}" height="60px" width="60px" alt="image" style="border-radius:70%;">
+                <img src="{% static 'images/logo.png'%}" height="60px" width="60px" alt="" style="border-radius:70%;">
                 <h3>BOOKSHELF</h3>
             </div>
 
-          
-            <div class="cart">
-                 <p>cart</p>
-            <a href="../cart"><img src="{% static 'images/carticon.png' %}"></a>
-            
-            </div>
             <div class="search">
                 <input type="text" name="search" id="" placeholder="search">
     
-                <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt="">
+                <!-- <img src="https://img.icons8.com/?size=100&id=aBNtkpYvycsP&format=png&color=000000" height="20px" width="20px" alt=""> -->
         </div>
 
-        <div class="list">
+        
+           <div class="list">
             <ul type="none">
+            
                 <li><a href="../index">Home</a></li>
-                <li><a href="../">Sign In</a></li>
-                <li><a href="../register">Sign Up</a></li>
+                {% if user.is_authenticated %}
+                <li><a href=""><img src="{% static 'images/profileicon.png' %}" ></a>
                 <li><a href="../logout">Sign Out</a></li>
                 <li><a href="">Contact Us</a></li>
                 </ul>
+               
+                {% else %}
+                <li><a href="../">Sign In</a></li>
+                <li><a href="../register">Sign Up</a></li>
+                <li><a href="">Contact Us</a></li>
+                </ul>
+                {% endif %}
+        </div>
+ <div class="cart">
+                 <p>cart</p>
+            <a href="../cart"><img src="{% static 'images/carticon.png' %}"></a>
+            
             </div>
         </div>
         <div class="nav2">
@@ -43,7 +51,7 @@
                     <a href="../mlmchild " >Children's Books</a>
                     <a href="../mlmdetective">Detective Novels </a>
                     <a href="../mlmfiction">Fiction</a>
-                    <a href="../mlmbiography" >Biography</a>
+                    <a href="../mlmbiography">Biography</a>
                     <a href="../mlmebook">EBooks</a>
                     
         </div>
@@ -71,7 +79,9 @@
                 <form method="post" action="{% url 'remove_from_cart' item.item.id %}">
                     {% csrf_token %}
                     <button type="submit" class="btn">Remove</button>
+
                 </form>
+                <a href="{% url 'book_order' item.item.id %}?quantity={{ item.quantity }}"style="border:1px solid gray;padding-left:8px;;padding-right:8px;padding-top:3px;color:black;text-decoration:none;background-color:orange;border-radius:3px;">Order Now</a>
             </li>
         </div>
        
