--- a/BOOKSHELF/templates/ad_update2.html
+++ b/BOOKSHELF/templates/ad_update2.html
@@ -140,11 +140,7 @@
                 </td>
                 <td>
                     
-                        <select name="stock" class="s4">
-                <option selected disabled>select option</option>
-                <option value="in stock"> ✔️ in stock </option>
-                <option value="out of stock"> ❌ out of stock</option>
-                </select>
+                        <input type="number" name="stock" placeholder="enter count of book">
               
                 </td>
                 </tr>
