--- a/BOOKSHELF/templates/viewcart.html
+++ b/BOOKSHELF/templates/viewcart.html
@@ -61,16 +61,19 @@
 {% if cart_items %}
 
 <h2>Your Cart</h2>
-    <ul type="none">
+    <ul type="none" style="">
       
       
         {% for item in cart_items %}
         <div class="product">
+            <div class="image">
       {% if item.item.doc %}
-  <img src="{{ item.item.doc.url }}" width="100" height="150" alt="{{ item.item.name }}" style="object-fit: cover; border-radius: 8px;">
+  <li><img src="{{ item.item.doc.url }}" width="100" height="150" alt="{{ item.item.name }}" style="object-fit: cover; border-radius: 8px;"></li>
 {% else %}
   <img src="{% static 'path/to/default-image.jpg' %}" width="100" height="100" alt="Default Image" style="object-fit: cover; border-radius: 8px;">
 {% endif %}
+</div>
+<div class="detail">
             <li class="name"> {{ item.item.name|truncatechars:40 }}</li> 
             <div class="inline">
                 <li class="quantity"> <span>₹{{ item.item.price }}</span> x {{ item.quantity }} items</li>
@@ -84,7 +87,8 @@
                 <a href="{% url 'book_order' item.item.id %}?quantity={{ item.quantity }}"style="border:1px solid gray;padding-left:8px;;padding-right:8px;padding-top:3px;color:black;text-decoration:none;background-color:orange;border-radius:3px;">Order Now</a>
             </li>
         </div>
-       
+        </div>
+
             <form method="post" action="{% url 'update_cart_quantity' item.id %}">
 
         <div class="count">
